--- a/art.html
+++ b/art.html
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class='section-container header'>
-                <div class='header-title'>POLYFFANY</div>
+                <div class='header-title'>Polyffany</div>
                 <div class='body-description'>Polyffany is an artist with a wide variety of interests such as contortion, baking, aerial silks, and watercolor. Currently, she's focusing on creating motivational and inspirational circus pieces and increasing her strength and flexibility.</div>
                 <div class='body-description'>Available for commissions or collaborations. Please reach out via Instagram for your specific inquiry.</div>
             </div>
