--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
     <head>
         <style>
             body {
+                background-color: black;
                 font-family: 'PT Sans', sans-serif;
                 margin: 0;
             }
             .title {
+                color: white;
                 font-size: 100px;
             }
             .cover {
@@ -15,6 +17,14 @@
                 align-items: center;
                 justify-content: center;
                 flex-direction: column;
+            }
+            .background {
+                display: flex;
+                position: absolute;
+                z-index: -1;
+            }
+            img {
+                width: 50%;
             }
             .button-container {
                 display: flex;
@@ -58,7 +68,10 @@
     </head>
     <body>
         <div class='cover'>
-            <div class='background'></div>
+            <div class='background'>
+                <img class='tech' src='assets/pexels-ron-lach-7848988.jpg'>
+                <img class='art' src='assets/aerials-rebecca-cropped.jpg'>
+            </div>
             <div class='title'>TIFFANY QI</div>
             <div class='button-container'>
                 <a href='tech.html'><button class='button-tech'>Tech</button></a>
