--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Tiffany Qi</title>
         <style>
             body {
                 background-color: black;
@@ -65,17 +66,20 @@
                 cursor: pointer;
             }
         </style>
+        <script type="text/javascript" src="assets/js/mixpanel.js"></script>
+        <script type="text/javascript" src="assets/js/script.js"></script>
+        <script>trackPageView(`Home`);</script>
     </head>
     <body>
         <div class='cover'>
             <div class='background'>
-                <img class='tech' src='assets/pexels-ron-lach-7848988.jpg'>
-                <img class='art' src='assets/aerials-rebecca-cropped.jpg'>
+                <img class='tech' src='assets/img/pexels-ron-lach-7848988.jpg'>
+                <img class='art' src='assets/img/aerials-rebecca-cropped.jpg'>
             </div>
             <div class='title'>TIFFANY QI</div>
             <div class='button-container'>
-                <a href='tech.html'><button class='button-tech'>Tech</button></a>
-                <a href='art.html'><button class='button-art'>Art</button></a>
+                <a href='tech'><button class='button-tech'>Tech</button></a>
+                <a href='art'><button class='button-art'>Art</button></a>
             </div>
         </div>
     </body>
