--- a/tech.html
+++ b/tech.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Tiffany Qi</title>
         <style>
             body {
                 background-color: #001D3D;
@@ -76,7 +77,10 @@
                     width: 600px;
                 }
             }
-            </style>
+        </style>
+        <script type="text/javascript" src="assets/js/mixpanel.js"></script>
+        <script type="text/javascript" src="assets/js/script.js"></script>
+        <script>trackPageView(`Tech`);</script>
         <link ref='https://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic', rel='stylesheet', type='text/css')>
     </head>
     <body>
@@ -150,7 +154,7 @@
                         <a class='contact-button' target="_blank" href='http://medium.com/@tiffanyqi'><button>Medium</button></a>
                         <a class='contact-button' target="_blank" href='http://www.linkedin.com/in/tiffanyqi'><button>LinkedIn</button></a>
                     </div>
-                    <a href='art.html'><button>Or check out my other life ➡</button></a>
+                    <a href='art'><button>Or check out my other life ➡</button></a>
                 </div>
             </div>
         </div>
