move assets into my-projects

--- a/my-projects/college-productivity.html
+++ b/my-projects/college-productivity.html
@@ -4,8 +4,8 @@
     <title>Productivity | Tiffany Qi</title>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
-    <link href='../assets/css/blog.css' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="../assets/js/mixpanel.js"></script>
+    <link href='./assets/css/blog.css' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="./assets/js/mixpanel.js"></script>
     <script>
       mixpanel.track("Project View", {"Project": "Productivity Project"});
     </script>
@@ -67,7 +67,7 @@
       <h3 id="about-methodology">My Diary: Getting Time Data</h3>
       <p>I am a Google Calendar Super User, and I am quite proud of that fact. Since November 2012, I have consistently logged my productive (and non-productive) moments of my life. (Most of Fall 2012 is an estimate of time spent except for the last two weeks of the semester.) As such, I am able to go back to any given day and reveal all the moments and feelings of the past. This improves my memory and gives me helpful insights along the way. Below are a couple of examples of a given week: one is of October 2014, while the other is slightly more recent at December 2015, which also happened to be the week of final exams.</p>
 
-      <img class="calendar" src="../assets/img/work/oct14.png" alt="October 2014">
+      <img class="calendar" src="./assets/img/work/oct14.png" alt="October 2014">
       <p>You can see that each category is represented by a calendar of different colors. I describe each event with some description. Some are more obvious, such as sleep, and so many events have "No Title".</p>
 
       <p>Each week, I calculate how much time I spend in each calendar, further calculating statistics about each class and activity I pursue. For this analysis, the calendar data I use are:</p>
@@ -83,7 +83,7 @@
         <li>♥♥♥</li>
       </ul>
       <p>I split up each calendar and attribute it to each given category, which includes the specific class and activity. As such, I calculate productivity strictly from the first four calendars. I have other things like "fun", which is calcuated from hobbies, games & time wasters, and social (spending time talking or doing something with someone not work-related), and time with my significant other. I have more than three years worth of quantifiable data on my productive (and not so productive) moments.</p>
-      <img class="calendar" src="../assets/img/work/dec15.png" alt="December 2015">
+      <img class="calendar" src="./assets/img/work/dec15.png" alt="December 2015">
 
       <h3 id="about-terminology">Terminology</h3>
       <p>There are a few statistics and college terms I use throughout the project. I define them below in case something doesn't make sense:</p>
@@ -604,8 +604,8 @@
   <!-- JAVASCRIPT TO MAKE THIS WORK -->
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script type="text/javascript" src="../assets/js/graphs.js"></script>
-  <script type="text/javascript" src="../assets/js/blog.js"></script>
+  <script type="text/javascript" src="./assets/js/graphs.js"></script>
+  <script type="text/javascript" src="./assets/js/blog.js"></script>
   <script type="text/javascript">
       google.load("visualization", "1", {packages:["corechart"]});
 
