--- a/my-projects/engineering-progress.html
+++ b/my-projects/engineering-progress.html
@@ -4,8 +4,8 @@
     <title>Engineering Progress | Tiffany Qi</title>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
-    <link href='../assets/css/blog.css' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="../assets/js/mixpanel.js"></script>
+    <link href='./assets/css/blog.css' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="./assets/js/mixpanel.js"></script>
     <script>
       mixpanel.track("Project View", {"Project": "Engineering Progress"});
     </script>
@@ -70,7 +70,7 @@
         <p>
             I calculated the time spent in hours by using Google Calendar and recorded the time in which I started and stopped working on a certain PR. You can read more specifically on my method in my <a href="college-productivity">College Productivity Analysis</a>. I used a single calendar called “coding”, and each event title constituted a PR. I included the typing of code, research, and brainstorms with coworkers into the time spent calculation for each PR. I also have other calendars, such as my main calendar (scheduling events with other coworkers), and tasks (writing documentation, doing HR tasks, deploying code, code reviews, etc).
         </p>
-        <img class="calendar" src="../assets/img/work/work-calendar.png" alt="March 2019, Mixpanel">
+        <img class="calendar" src="./assets/img/work/work-calendar.png" alt="March 2019, Mixpanel">
         <p>
             A typical week from March 2019.
         </p>
@@ -472,8 +472,8 @@
   <!-- JAVASCRIPT TO MAKE THIS WORK -->
     <script type="text/javascript" src='https://www.gstatic.com/charts/loader.js'></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script type="text/javascript" src="../assets/js/graphs.js"></script>
-    <script type="text/javascript" src="../assets/js/blog.js"></script>
+    <script type="text/javascript" src="./assets/js/graphs.js"></script>
+    <script type="text/javascript" src="./assets/js/blog.js"></script>
     <script type="text/javascript">
         google.charts.load('current', {'packages': [`corechart`]});
         const MONTH_DATA_URL = 'https://docs.google.com/spreadsheets/d/1snVaG2XNltJHeJpsBj6ugGoX8Y-3xpqSNIBXdedl_Yg/edit#gid=374449975';
