--- a/my-projects/css-art.html
+++ b/my-projects/css-art.html
@@ -7,8 +7,8 @@
       href="https://fonts.googleapis.com/css?family=Lora:400,700"
       rel="stylesheet"
     />
-    <link href="../assets/css/css-art.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="../assets/js/mixpanel.js"></script>
+    <link href="./assets/css/css-art.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="./assets/js/mixpanel.js"></script>
     <script>
       mixpanel.track("Project View", { Project: "CSS Art" });
     </script>
