--- a/my-projects/how-many-pidgeys-pokemon-go.html
+++ b/my-projects/how-many-pidgeys-pokemon-go.html
@@ -4,8 +4,8 @@
     <title>How many Pidgeys have been transferred to Professor Willow? | Tiffany Qi</title>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
-    <link href='../assets/css/blog.css' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="../assets/js/mixpanel.js"></script>
+    <link href='./assets/css/blog.css' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="./assets/js/mixpanel.js"></script>
     <script>
       mixpanel.track("Project View", {"Project": "How many Pidgeys have been transferred to Professor Willow?"});
     </script>
@@ -39,7 +39,7 @@
         <p>
             TL;DR: 5.3 billion Pidgeys have been caught and transferred to Professor Willow. Analysis below:
         </p>
-        <img class="calendar" src="../assets/img/work/pokemon-go-pidgey-800x450.png">
+        <img class="calendar" src="./assets/img/work/pokemon-go-pidgey-800x450.png">
 
         <h2 id="users">Number of Unique Users</h2>
         <p>
